--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,12 @@
-.wrapper {
+.home {
+	width: 100%;
+}
+
+.home-title {
+	font-size: 48px;
+}
+
+.buttons-wrapper {
 	display: inline-flex;
 	list-style: none;
 	height: 120px;
@@ -8,7 +16,7 @@
 	justify-content: center;
 }
 
-.wrapper .icon {
+.buttons-wrapper .icon {
 	position: relative;
 	background: #fff;
 	border-radius: 50%;
@@ -25,7 +33,7 @@
 	transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .tooltip {
+.buttons-wrapper .tooltip {
 	position: absolute;
 	top: 0;
 	font-size: 14px;
@@ -39,7 +47,7 @@
 	transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .tooltip::before {
+.buttons-wrapper .tooltip::before {
 	position: absolute;
 	content: '';
 	height: 8px;
@@ -51,35 +59,35 @@
 	transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .icon:hover .tooltip {
+.buttons-wrapper .icon:hover .tooltip {
 	top: -45px;
 	opacity: 1;
 	visibility: visible;
 	pointer-events: auto;
 }
 
-.wrapper .icon:hover span,
-.wrapper .icon:hover .tooltip {
+.buttons-wrapper .icon:hover span,
+.buttons-wrapper .icon:hover .tooltip {
 	text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
-.wrapper .facebook:hover,
-.wrapper .facebook:hover .tooltip,
-.wrapper .facebook:hover .tooltip::before {
+.buttons-wrapper .facebook:hover,
+.buttons-wrapper .facebook:hover .tooltip,
+.buttons-wrapper .facebook:hover .tooltip::before {
 	background: #1877f2;
 	color: #fff;
 }
 
-.wrapper .twitter:hover,
-.wrapper .twitter:hover .tooltip,
-.wrapper .twitter:hover .tooltip::before {
+.buttons-wrapper .twitter:hover,
+.buttons-wrapper .twitter:hover .tooltip,
+.buttons-wrapper .twitter:hover .tooltip::before {
 	background: #1da1f2;
 	color: #fff;
 }
 
-.wrapper .instagram:hover,
-.wrapper .instagram:hover .tooltip,
-.wrapper .instagram:hover .tooltip::before {
+.buttons-wrapper .instagram:hover,
+.buttons-wrapper .instagram:hover .tooltip,
+.buttons-wrapper .instagram:hover .tooltip::before {
 	background: #e4405f;
 	color: #fff;
 }
