--- a/css/home.css
+++ b/css/home.css
@@ -3,15 +3,19 @@
 }
 
 .home-title {
+	margin: 60px 0;
 	font-size: 48px;
 	text-align: center;
+	font-family: 'Bebas Neue', Arial;
+	color: #002b5b;
 }
 
 .buttons-wrapper {
 	display: inline-flex;
 	list-style: none;
-	height: 120px;
 	width: 100%;
+	margin: 0;
+	padding: 0;
 	padding-top: 40px;
 	font-family: 'Poppins', sans-serif;
 	justify-content: center;
@@ -65,6 +69,21 @@
 	opacity: 1;
 	visibility: visible;
 	pointer-events: auto;
+}
+
+.easy-btn {
+	background-color: transparent;
+	border: none;
+}
+
+.medium-btn {
+	background-color: transparent;
+	border: none;
+}
+
+.hard-btn {
+	background-color: transparent;
+	border: none;
 }
 
 .buttons-wrapper .icon:hover span,
